clusters/lab/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
spec:
  selector:
    app.kubernetes.io/name: actual
  ports:
    - name: http
      port: 80
      targetPort: http
